# MyDevContainer

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-install.sh
