[project]
name = "Project"
version = "0.1.0"
description = "Project Application"
authors = [
    {name = "Manoj Manivannan",email = "manoj.manivannan@infovista.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"


dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.uv]
managed = true
default-groups = ["dev","lint"]

[build-system]
requires = ["uv_build>=0.7.17,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[dependency-groups]
dev = [
  "pytest"
]
lint = [
  "ruff"
]
